# smart-wardrobe

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
backend/: README.md  env.example  main.py  pyproject.toml
backend/api/: routers.py
backend/api/v1/: item_image.py  item_recognition.py  items.py  recognition.py
backend/api/v1/helpers/: recognition.py  upload.py
backend/core/: config.py  db.py  logger.py  middleware.py
backend/crud/: base.py  item.py  item_image.py
backend/models/: __init__.py  base.py  item.py  mixins.py
backend/schemas/: common.py  item.py  item_image.py  mixins.py  recognition.py  types.py
