[project]
name = "backend"
version = "0.1.0"
description = "Приложение FastAPI 'Умный гардероб'"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "fastapi>=0.123.5",
    "orjson>=3.11.4",
    "pydantic>=2.12.5",
    "pydantic-settings[dotenv]>=2.12.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
